[gd_scene load_steps=19 format=3 uid="uid://0pabuti51c45"]

[ext_resource type="Texture2D" uid="uid://4igi7ee72c3p" path="res://ShmupSandbox/Assets/Enemy/skulljack_attack-v1.png" id="1_ookk6"]
[ext_resource type="Script" uid="uid://t0kgrknbnmao" path="res://ShmupSandbox/Enemies/Scripts/skulljack.gd" id="1_xkdqo"]
[ext_resource type="Texture2D" uid="uid://djvbob5gnwk85" path="res://ShmupSandbox/Assets/Enemy/skulljack_death-v1.png" id="2_45juw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_45juw"]
radius = 17.0
height = 58.0

[sub_resource type="AtlasTexture" id="AtlasTexture_45juw"]
atlas = ExtResource("1_ookk6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkdqo"]
atlas = ExtResource("1_ookk6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fpwd"]
atlas = ExtResource("1_ookk6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufqmf"]
atlas = ExtResource("1_ookk6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbmci"]
atlas = ExtResource("1_ookk6")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_33ol2"]
atlas = ExtResource("1_ookk6")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_on2aa"]
atlas = ExtResource("1_ookk6")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v4sf"]
atlas = ExtResource("1_ookk6")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbad7"]
atlas = ExtResource("2_45juw")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_eacv7"]
atlas = ExtResource("2_45juw")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jypgc"]
atlas = ExtResource("2_45juw")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mny4r"]
atlas = ExtResource("2_45juw")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_71m2a"]
atlas = ExtResource("2_45juw")
region = Rect2(384, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_dbad7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45juw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkdqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fpwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufqmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbmci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33ol2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on2aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v4sf")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbad7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eacv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jypgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mny4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71m2a")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 12.0
}]

[node name="skulljack" type="Area2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_xkdqo")
speed = 400.0

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_45juw")
debug_color = Color(0.94651, 0.232654, 0, 0.42)

[node name="animated_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dbad7")
animation = &"attack"
autoplay = "attack"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.41
one_shot = true
explosiveness = 1.0
randomness = 0.84
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 151.08
initial_velocity_max = 287.77

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(60, 0)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
